--- a/share/man/man9/EVENTHANDLER.9
+++ b/share/man/man9/EVENTHANDLER.9
@@ -25,7 +25,7 @@
 .\"
 .\" $FreeBSD: src/share/man/man9/EVENTHANDLER.9,v 1.4 2005/10/11 16:05:35 keramida Exp $
 .\"
-.Dd March 31, 2007
+.Dd June 21, 2018
 .Dt EVENTHANDLER 9
 .Os
 .Sh NAME
@@ -190,10 +190,10 @@ Callbacks invoked when the system is being woken up.
 .It Vt dev_clone
 Callbacks invoked when a new entry is created under
 .Pa /dev .
+.It Vt if_clone_event
+Callbacks invoked when a new interface cloner is attached.
 .It Vt ifaddr_event
 Callbacks invoked when an address is set up on a network interface.
-.It Vt if_clone_event
-Callbacks invoked when an interface is cloned.
 .It Vt ifnet_attach_event
 Callbacks invoked when a new network interface appears.
 .It Vt ifnet_detach_event
