eventhandler: Implement ifnet_link_event
The "ifnet_link_event" is triggered by the change of the link state of
an interface.

Taken-from: FreeBSD

--- a/share/man/man9/EVENTHANDLER.9
+++ b/share/man/man9/EVENTHANDLER.9
@@ -206,6 +206,8 @@ Callbacks invoked when a new network interface appears.
 Callbacks invoked when a network interface is removed.
 .It Vt ifnet_event
 Callbacks invoked when a network interface is brought up or down.
+.It Vt ifnet_link_event
+Callbacks invoked when the link state of an interface has changed.
 .It Vt power_profile_change
 Callbacks invoked when the power profile of the system changes.
 .It Vt shutdown_pre_sync
