bpf: Move bpf_track event declaration to <net/bpf.h>
Move the declaration of the "bpf_track" event from <sys/eventhandler.h>
to <net/bpf.h>.

Document the "bpf_track" event in eventhandler.9 man page.

Based on FreeBSD.

--- a/share/man/man9/EVENTHANDLER.9
+++ b/share/man/man9/EVENTHANDLER.9
@@ -190,6 +190,9 @@ Callbacks invoked when the system is being woken up.
 .It Vt dev_clone
 Callbacks invoked when a new entry is created under
 .Pa /dev .
+.It Vt bpf_track
+Callbacks invoked when a BPF listener attaches to/detaches from network
+interface.
 .It Vt group_attach_event
 Callbacks invoked when a new interface group has been created.
 .It Vt group_change_event
