openpam: Since there is no pam(8) manual page, refer to pam(3).

--- a/lib/libpam/modules/pam_deny/pam_deny.8
+++ b/lib/libpam/modules/pam_deny/pam_deny.8
@@ -23,7 +23,6 @@
 .\" SUCH DAMAGE.
 .\"
 .\" $FreeBSD: src/lib/libpam/modules/pam_deny/pam_deny.8,v 1.4 2001/08/15 20:05:30 markm Exp $
-.\" $DragonFly: src/lib/pam_module/pam_deny/pam_deny.8,v 1.1 2005/08/01 16:15:19 joerg Exp $
 .\"
 .Dd July 7, 2001
 .Dt PAM_DENY 8
@@ -76,6 +75,6 @@ reasons why the user's
 authentication attempt was declined.
 .El
 .Sh SEE ALSO
+.Xr pam 3 ,
 .Xr syslog 3 ,
-.Xr pam.conf 5 ,
-.Xr pam 8
+.Xr pam.conf 5
