--- a/lib/libpam/modules/pam_nologin/pam_nologin.8
+++ b/lib/libpam/modules/pam_nologin/pam_nologin.8
@@ -23,7 +23,6 @@
 .\" SUCH DAMAGE.
 .\"
 .\" $FreeBSD: src/lib/libpam/modules/pam_nologin/pam_nologin.8,v 1.7 2007/06/14 13:07:06 yar Exp $
-.\" $DragonFly: src/lib/pam_module/pam_nologin/pam_nologin.8,v 1.3 2008/02/08 10:41:43 swildner Exp $
 .\"
 .Dd June 10, 2007
 .Dt PAM_NOLOGIN 8
@@ -84,11 +83,11 @@ reasons why the user's
 login attempt was declined.
 .El
 .Sh SEE ALSO
+.Xr pam 3 ,
 .Xr syslog 3 ,
 .Xr login.conf 5 ,
 .Xr nologin 5 ,
-.Xr pam.conf 5 ,
-.Xr pam 8
+.Xr pam.conf 5
 .Sh HISTORY
 .Nm
 originated from
