--- a/lib/libpam/modules/pam_opie/pam_opie.8
+++ b/lib/libpam/modules/pam_opie/pam_opie.8
@@ -33,7 +33,6 @@
 .\" SUCH DAMAGE.
 .\"
 .\" $FreeBSD: src/lib/libpam/modules/pam_opie/pam_opie.8,v 1.9 2002/12/27 12:15:31 schweikh Exp $
-.\" $DragonFly: src/lib/pam_module/pam_opie/pam_opie.8,v 1.2 2008/01/24 17:14:19 swildner Exp $
 .\"
 .Dd July 7, 2001
 .Dt PAM_OPIE 8
@@ -117,7 +116,7 @@ default OPIE password database.
 .Sh SEE ALSO
 .Xr passwd 1 ,
 .Xr getlogin 2 ,
+.Xr pam 3 ,
 .Xr syslog 3 ,
 .Xr opie 4 ,
-.Xr pam.conf 5 ,
-.Xr pam 8
+.Xr pam.conf 5
