--- a/lib/libpam/modules/pam_ssh/pam_ssh.8
+++ b/lib/libpam/modules/pam_ssh/pam_ssh.8
@@ -140,8 +140,8 @@ SSH2 ECDSA key
 .El
 .Sh SEE ALSO
 .Xr ssh-agent 1 ,
-.Xr pam.conf 5 ,
-.Xr pam 8
+.Xr pam 3 ,
+.Xr pam.conf 5
 .Sh AUTHORS
 The
 .Nm
