--- a/lib/libpam/modules/pam_tacplus/pam_tacplus.8
+++ b/lib/libpam/modules/pam_tacplus/pam_tacplus.8
@@ -103,9 +103,9 @@ The standard TACACS+ client configuration file for
 .Nm
 .El
 .Sh SEE ALSO
+.Xr pam 3 ,
 .Xr passwd 5 ,
-.Xr tacplus.conf 5 ,
-.Xr pam 8
+.Xr tacplus.conf 5
 .Sh HISTORY
 The
 .Nm
