--- a/lib/libpam/modules/pam_chroot/pam_chroot.8
+++ b/lib/libpam/modules/pam_chroot/pam_chroot.8
@@ -80,8 +80,8 @@ Specify the chroot directory to use if one could not be derived from
 the user's home directory.
 .El
 .Sh SEE ALSO
-.Xr pam.conf 5 ,
-.Xr pam 8
+.Xr pam 3 ,
+.Xr pam.conf 5
 .Sh AUTHORS
 The
 .Nm
