--- a/lib/libpam/modules/pam_guest/pam_guest.8
+++ b/lib/libpam/modules/pam_guest/pam_guest.8
@@ -82,10 +82,10 @@ password.
 Requires the guest user to type in the guest account name as password.
 .El
 .Sh SEE ALSO
+.Xr pam 3 ,
 .Xr pam_getenv 3 ,
 .Xr pam_get_item 3 ,
-.Xr pam.conf 5 ,
-.Xr pam 8
+.Xr pam.conf 5
 .Sh AUTHORS
 The
 .Nm
