--- a/lib/libpam/modules/pam_lastlog/pam_lastlog.8
+++ b/lib/libpam/modules/pam_lastlog/pam_lastlog.8
@@ -92,10 +92,10 @@ Ignore I/O failures.
 .Xr w 1 ,
 .Xr login 3 ,
 .Xr logout 3 ,
+.Xr pam 3 ,
 .Xr pam.conf 5 ,
 .Xr utmp 5 ,
-.Xr lastlogin 8 ,
-.Xr pam 8
+.Xr lastlogin 8
 .Sh AUTHORS
 The
 .Nm
