--- a/lib/libpam/modules/pam_permit/pam_permit.8
+++ b/lib/libpam/modules/pam_permit/pam_permit.8
@@ -23,7 +23,6 @@
 .\" SUCH DAMAGE.
 .\"
 .\" $FreeBSD: src/lib/libpam/modules/pam_permit/pam_permit.8,v 1.3 2001/07/13 09:09:50 ru Exp $
-.\" $DragonFly: src/lib/pam_module/pam_permit/pam_permit.8,v 1.1 2005/08/01 16:15:19 joerg Exp $
 .\"
 .Dd July 7, 2001
 .Dt PAM_PERMIT 8
@@ -71,6 +70,6 @@ debugging information at
 level.
 .El
 .Sh SEE ALSO
+.Xr pam 3 ,
 .Xr syslog 3 ,
-.Xr pam.conf 5 ,
-.Xr pam 8
+.Xr pam.conf 5
