--- a/lib/libpam/modules/pam_radius/pam_radius.8
+++ b/lib/libpam/modules/pam_radius/pam_radius.8
@@ -109,9 +109,9 @@ The standard RADIUS client configuration file for
 .Nm
 .El
 .Sh SEE ALSO
+.Xr pam 3 ,
 .Xr passwd 5 ,
-.Xr radius.conf 5 ,
-.Xr pam 8
+.Xr radius.conf 5
 .Sh HISTORY
 The
 .Nm
