--- a/lib/libpam/modules/pam_securetty/pam_securetty.8
+++ b/lib/libpam/modules/pam_securetty/pam_securetty.8
@@ -86,7 +86,7 @@ authentication attempt was declined.
 .El
 .Sh SEE ALSO
 .Xr getttynam 3 ,
+.Xr pam 3 ,
 .Xr syslog 3 ,
 .Xr pam.conf 5 ,
-.Xr ttys 5 ,
-.Xr pam 8
+.Xr ttys 5
