install(1): Add a -N option, improving NetBSD and FreeBSD compatibility
* -N is the standard NetBSD and FreeBSD install(1) option to use
  alternative user and group databases

* DragonFly previously used -L to do the same thing. Keep this option
  but warn to use -N instead.

--- a/usr.bin/xinstall/install.1
+++ b/usr.bin/xinstall/install.1
@@ -41,8 +41,8 @@
 .Op Fl D Ar destdir
 .Op Fl f Ar flags
 .Op Fl g Ar group
-.Op Fl L Ar etcdir
 .Op Fl m Ar mode
+.Op Fl N Ar dbdir
 .Op Fl o Ar owner
 .Ar file1 file2
 .Nm
@@ -51,8 +51,8 @@
 .Op Fl D Ar destdir
 .Op Fl f Ar flags
 .Op Fl g Ar group
-.Op Fl L Ar etcdir
 .Op Fl m Ar mode
+.Op Fl N Ar dbdir
 .Op Fl o Ar owner
 .Ar file1 ... fileN directory
 .Nm
@@ -60,8 +60,8 @@
 .Op Fl lUv
 .Op Fl D Ar destdir
 .Op Fl g Ar group
-.Op Fl L Ar etcdir
 .Op Fl m Ar mode
+.Op Fl N Ar dbdir
 .Op Fl o Ar owner
 .Ar directory ...
 .Sh DESCRIPTION
@@ -93,11 +93,6 @@ them to
 See
 .Fl B
 for specifying a different backup suffix.
-.It Fl L Ar etcdir
-Specify the location of the /etc directory containing the group and password
-files.  The default is "/etc".  If an alternative directory is specified
-group and username lookups will be made from the alternative group and
-password files rather than the system group and password files.
 .It Fl B Ar suffix
 Use
 .Ar suffix
@@ -135,7 +130,7 @@ Specify a group.
 A numeric GID is allowed.
 .It Fl l
 When the
-.Fl L
+.Fl N
 option is specified and the owner or group cannot be found, fallback to
 system files.
 .It Fl M
@@ -147,6 +142,18 @@ The default mode is set to rwxr-xr-x (0755).
 The specified mode may be either an octal or symbolic value; see
 .Xr chmod 1
 for a description of possible mode values.
+.It Fl N
+Use the user database text file
+.Pa master.passwd
+and group database text file
+.Pa group
+from
+.Ar dbdir ,
+rather than using the results from the system's
+.Xr getpwnam 3
+and
+.Xr getgrnam 3
+(and related) library calls.
 .It Fl o
 Specify an owner.
 A numeric UID is allowed.
@@ -257,6 +264,8 @@ The default was changed to copy in
 .Xr mv 1 ,
 .Xr strip 1 ,
 .Xr mmap 2 ,
+.Xr getgrnam 3 ,
+.Xr getpwnam 3 ,
 .Xr chown 8
 .Sh HISTORY
 The
