build.7: Fold CAVEATS into EXAMPLES. No need for an extra section.

--- a/share/man/man7/build.7
+++ b/share/man/man7/build.7
@@ -330,11 +330,9 @@ otherwise many programs which have been rebuilt (such as
 .Xr ps 1 ,
 .Xr top 1 ,
 etc.) may not work with the old kernel which is still running.
-.Sh CAVEATS
-The build and install order in the
-.Sx EXAMPLES
-section enforces that the new kernel is installed before the new
-world.
+.Pp
+The above mentioned build and install order enforces that the new kernel
+is installed before the new world.
 Sometimes it might be necessary to reboot the system between those two
 steps.
 In this case
