wcscoll.3: Remove leading '+' from copy/paste from a patch.

--- a/lib/libc/string/wcscoll.3
+++ b/lib/libc/string/wcscoll.3
@@ -113,10 +113,10 @@ The
 function
 conforms to
 .St -isoC-99 .
-+The
-+.Fn wcscoll_l
-+function conforms to
-+.St -p1003.1-2008 .
+The
+.Fn wcscoll_l
+function conforms to
+.St -p1003.1-2008 .
 .Sh BUGS
 The current implementation of
 .Fn wcscoll
