Fix remaining references to mkinitrd.8 to initrd.7
Reported-by: swildner

--- a/sys/boot/common/loader.8
+++ b/sys/boot/common/loader.8
@@ -25,7 +25,7 @@
 .\"
 .\" $FreeBSD: src/sys/boot/common/loader.8,v 1.57 2003/06/29 20:57:55 brueffer Exp $
 .\"
-.Dd April 28, 2016
+.Dd July 6, 2018
 .Dt LOADER 8
 .Os
 .Sh NAME
@@ -784,7 +784,7 @@ such as:
 Root file system and extra options for
 .Nm initrd .
 See
-.Xr mkinitrd 8 .
+.Xr initrd 7 .
 .It Va nfsroot.iosize
 Override the default NFS netbooted root mount io block size.
 The default is 8192 which works with most servers.
