hier.7: Mention /rescue.

--- a/share/man/man7/hier.7
+++ b/share/man/man7/hier.7
@@ -28,7 +28,7 @@
 .\"	@(#)hier.7	8.1 (Berkeley) 6/5/93
 .\" $FreeBSD: src/share/man/man7/hier.7,v 1.29.2.17 2003/01/13 21:43:50 ceri Exp $
 .\"
-.Dd April 21, 2018
+.Dd July 7, 2018
 .Dt HIER 7
 .Os
 .Sh NAME
@@ -158,6 +158,9 @@ process file system;
 see
 .Xr procfs 5 ,
 .Xr mount_procfs 8
+.It Pa /rescue/
+statically linked rescue tools, see
+.Xr initrd 7
 .It Pa /root/
 root's HOME directory
 .It Pa /sbin/
