--- a/share/man/man4/tap.4
+++ b/share/man/man4/tap.4
@@ -1,7 +1,7 @@
 .\" $FreeBSD: src/share/man/man4/tap.4,v 1.1.2.7 2002/04/16 23:59:28 trhodes Exp $
 .\" Based on PR#2411
 .\"
-.Dd August 6, 2009
+.Dd July 9, 2018
 .Dt TAP 4
 .Os
 .Sh NAME
@@ -18,35 +18,79 @@ described as the network interface analog of the
 that is,
 .Nm
 does for network interfaces what the
-.Nm pty
+.Xr pty 4
 driver does for terminals.
 .Pp
 The
 .Nm
 driver, like the
-.Nm pty
+.Xr pty 4
 driver, provides two interfaces: an interface like the usual facility
 it is simulating
 (an Ethernet network interface in the case of
 .Nm ,
 or a terminal for
-.Nm pty ) ,
+.Xr pty 4 ) ,
 and a character-special device
+.Dq control
+interface.
+A client program transfers Ethernet frames to or from the
+.Nm
+.Dq control
+interface.
+The
+.Xr tun 4
+interface provides similar functionality at the network layer:
+a client will transfer IP (by default) packets to or from a
+.Xr tun 4
 .Dq control
 interface.
 .Pp
 The network interfaces are named
-.Sy tap Ns Ar 0 ,
-.Sy tap Ns Ar 1 ,
-etc, and each one supports the usual Ethernet network-interface
-.Xr ioctl 2 Ns s ,
-such as
-.Dv SIOCSIFADDR
-and
-.Dv SIOCSIFNETMASK ,
+.Dq Li tap0 ,
+.Dq Li tap1 ,
+etc., one for each control device that has been opened.
+These Ethernet network interfaces persist until the
+.Pa if_tap.ko
+module is unloaded, or until removed with
+.Dq ifconfig destroy
+(see below).
+.Pp
+The
+.Nm
+devices are created using interface cloning.
+This is done using the
+.Dq ifconfig tap Ns Sy N No create
+command.
+This is the preferred method of creating
+.Nm
+devices.
+The same method allows removal of interfaces by using the
+.Dq ifconfig tap Ns Sy N No destroy
+command.
+.Pp
+The
+.Nm
+interface permits opens on the special control device
+.Pa /dev/tap .
+When this special device is opened,
+.Nm
+will return a handle for the lowest unused
+.Nm
+device (use
+.Xr devname 3
+to determine which).
+.Pp
+Control devices (once successfully opened) persist until the
+.Pa if_tap.ko
+module is unloaded or the interface is destroyed.
+.Pp
+Each interface supports the usual Ethernet network interface
+.Xr ioctl 2 Ns s
 and thus can be used with
 .Xr ifconfig 8
-like any other Ethernet interface. When the system chooses to transmit
+like any other Ethernet interface.
+When the system chooses to transmit
 an Ethernet frame on the network interface, the frame can be read from
 the control device
 (it appears as
@@ -61,7 +105,18 @@ The Ethernet tunnel device, normally
 .Pa /dev/tap Ns Sy N ,
 is exclusive-open
 (it cannot be opened if it is already open)
-and is restricted to the super-user.
+and is restricted to the super-user, unless the
+.Xr sysctl 8
+variable
+.Va net.link.tap.user_open
+is non-zero.
+If the
+.Xr sysctl 8
+variable
+.Va net.link.tap.up_on_open
+is non-zero, the tunnel device will be marked
+.Dq up
+when the control device is opened.
 A
 .Fn read
 call will return an error
@@ -73,7 +128,8 @@ Once the interface is ready,
 will return an Ethernet frame if one is available; if not, it will
 either block until one is or return
 .Er EWOULDBLOCK ,
-depending on whether non-blocking I/O has been enabled. If the frame
+depending on whether non-blocking I/O has been enabled.
+If the frame
 is longer than is allowed for in the buffer passed to
 .Fn read ,
 the extra data will be silently dropped.
@@ -82,7 +138,8 @@ A
 .Xr write 2
 call passes an Ethernet frame in to be
 .Dq received
-on the pseudo-interface.  Each
+on the pseudo-interface.
+Each
 .Fn write
 call supplies exactly one frame; the frame length is taken from the
 amount of data provided to
@@ -102,18 +159,21 @@ calls are supported
 .It Dv TAPSDEBUG
 The argument should be a pointer to an
 .Va int ;
-this sets the internal debugging variable to that value.  What, if
-anything, this variable controls is not documented here; see the source
-code.
+this sets the internal debugging variable to that value.
+What, if anything, this variable controls is not documented here,
+see the source code.
 .It Dv TAPGDEBUG
 The argument should be a pointer to an
 .Va int ;
 this stores the internal debugging variable's value into it.
-.It Dv FIONBIO
-Turn non-blocking I/O for reads off or on, according as the argument
-.Va int Ns 's
-value is or isn't zero
-(Writes are always nonblocking).
+.It Dv TAPSIFINFO
+Set network interface information (line speed, MTU and type).
+The argument should be a pointer to a
+.Va struct tapinfo .
+.It Dv TAPGIFINFO
+Retrieve network interface information (line speed, MTU and type).
+The argument should be a pointer to a
+.Va struct tapinfo .
 .It Dv FIOASYNC
 Turn asynchronous I/O for reads
 (i.e., generation of
@@ -121,7 +181,7 @@ Turn asynchronous I/O for reads
 when data is available to be read)
 off or on, according as the argument
 .Va int Ns 's
-value is or isn't zero.
+value is or is not zero.
 .It Dv FIONREAD
 If any frames are queued to be read, store the size of the first one into the argument
 .Va int ;
@@ -143,7 +203,8 @@ Retrieve the Media Access Control
 .Pq Dv MAC
 address of the
 .Dq remote
-side. This command is used by the VMware port and expected to be executed on
+side.
+This command is used by the VMware port and expected to be executed on
 descriptor, associated with control device
 (usually
 .Pa /dev/vmnet Ns Sy N
@@ -154,7 +215,8 @@ The
 which is passed as the argument, is expected to have enough space to store
 the
 .Dv MAC
-address. At the open time both
+address.
+At the open time both
 .Dq local
 and
 .Dq remote
@@ -168,7 +230,8 @@ Set the Media Access Control
 .Pq Dv MAC
 address of the
 .Dq remote
-side. This command is used by VMware port and expected to be executed on
+side.
+This command is used by VMware port and expected to be executed on
 a descriptor, associated with control device
 (usually
 .Pa /dev/vmnet Ns Sy N ) .
@@ -183,21 +246,21 @@ On the last close of the data device, the interface is
 brought down
 (as if with
 .Dq ifconfig tap Ns Sy N No down )
-unless the devices is a
+unless the device is a
 .Em VMnet
 device.
-All queued frames are thrown away. If the interface is up when the data
+All queued frames are thrown away.
+If the interface is up when the data
 device is not open, output frames are thrown away rather than
 letting them pile up.
 .Pp
 The
 .Nm
-device is also can be used with the
-.Em VMware
-port as a replacement
+device can also be used with the VMware port as a replacement
 for the old
 .Em VMnet
-device driver. The driver uses the minor number
+device driver.
+The driver uses the minor number
 to select between
 .Nm
 and
@@ -212,20 +275,22 @@ where
 .Va N
 is a
 .Em VMnet
-unit number. In this case control device is expected to be
+unit number.
+In this case the control device is expected to be
 .Pa /dev/vmnet Ns Sy N ,
-and network interface will be
+and the network interface will be
 .Sy vmnet Ns Ar N .
 Additionally,
 .Em VMnet
 devices do not
 .Xr ifconfig 8
 themselves down when the
-control device is closed. Everything else is the same.
+control device is closed.
+Everything else is the same.
 .Pp
-In addition to the above mentioned,
+In addition to the above mentioned
 .Xr ioctl 2
-calls, there is one additional one for the VMware port.
+calls, there is an additional one for the VMware port:
 .Bl -tag -width ".Dv VMIO_SIOCSETMACADDR"
 .It Dv VMIO_SIOCSIFFLAGS
 VMware
@@ -233,4 +298,5 @@ VMware
 .El
 .Sh SEE ALSO
 .Xr inet 4 ,
-.Xr intro 4
+.Xr tun 4 ,
+.Xr ifconfig 8
