--- a/share/man/man4/tap.4
+++ b/share/man/man4/tap.4
@@ -1,7 +1,7 @@
 .\" $FreeBSD: src/share/man/man4/tap.4,v 1.1.2.7 2002/04/16 23:59:28 trhodes Exp $
 .\" Based on PR#2411
 .\"
-.Dd July 12, 2018
+.Dd July 13, 2018
 .Dt TAP 4
 .Os
 .Sh NAME
@@ -174,6 +174,13 @@ The argument should be a pointer to a
 Retrieve network interface information (line speed, MTU and type).
 The argument should be a pointer to a
 .Va struct tapinfo .
+.It Dv TAPGIFNAME
+Retrieve network interface name.
+The argument should be a pointer to a
+.Va struct ifreq .
+The interface name will be returned in the
+.Va ifr_name
+field.
 .It Dv FIOASYNC
 Turn asynchronous I/O for reads
 (i.e., generation of
