rc: Bring in a simple mechanism to run rc scripts only once.
The basic mechanism is: If /firstboot exists, rc will also run all
scripts that have the "firstboot" keyword, then delete /firstboot.

This is a simpler version of FreeBSD's work. Specifically, we hardcode
the firstboot sentinel's name to /firstboot and we also remove it a
bit more simply because we assume that at the end of /etc/rc, root is
R/W.

This mechanism is used for example by sysutils/ec2-scripts and is in
preparation for the upcoming ena(4) driver import.

Based-on: FreeBSD

--- a/share/man/man8/rc.8
+++ b/share/man/man8/rc.8
@@ -31,7 +31,7 @@
 .\"     @(#)rc.8	8.2 (Berkeley) 12/11/93
 .\" $FreeBSD: src/share/man/man8/rc.8,v 1.22 2002/12/12 17:25:58 ru Exp $
 .\"
-.Dd October 17, 2017
+.Dd July 20, 2018
 .Dt RC 8
 .Os
 .Sh NAME
@@ -113,6 +113,13 @@ speedup will not occur when
 .Nm
 is started up after exiting the single-user shell.
 .It
+If the file
+.Pa /firstboot
+does not exist, add
+.Dq Li firstboot
+to the list of KEYWORDS to skip in
+.Xr rcorder 8 .
+.It
 Invoke
 .Xr rcorder 8
 to order the files in
@@ -137,6 +144,10 @@ and sources the script in a subshell.
 If the script has a
 .Pa .sh
 suffix then it is sourced directly into the current shell.
+.It
+If the file
+.Pa /firstboot
+exists, delete it.
 .El
 .Ss Operation of Nm rc.shutdown
 .Bl -enum
