kernel/lockmgr: Add lockmgr_try().
It just adds LK_NOWAIT to the flags and returns whether the
lock was obtained.

It is similar to other functions such as spin_trylock() or
FreeBSD's mtx_trylock() and can be used to port the latter.

Note that like these functions, it returns TRUE if successful,
while lockmgr() returns 0 if successful. This difference was
the source of minor confusion and porting mistakes in the past.
In fact, our driver porting document also didn't point out this
difference. I will fix some of these little issues in a separate
commit.

--- a/share/man/man9/lock.9
+++ b/share/man/man9/lock.9
@@ -26,12 +26,13 @@
 .\"
 .\" $FreeBSD: src/share/man/man9/lock.9,v 1.11 2003/09/08 19:57:21 ru Exp $
 .\"
-.Dd November 25, 2017
+.Dd July 21, 2018
 .Dt LOCK 9
 .Os
 .Sh NAME
 .Nm lockinit ,
 .Nm lockmgr ,
+.Nm lockmgr_try ,
 .Nm lockstatus ,
 .Nm lockmgr_printinfo ,
 .Nm lockowned
@@ -45,6 +46,8 @@
 .Fn lockuninit "struct lock *lkp"
 .Ft int
 .Fn lockmgr "struct lock *lkp" "u_int flags"
+.Ft boolean_t
+.Fn lockmgr_try "struct lock *lkp" "u_int flags"
 .Ft int
 .Fn lockstatus "struct lock *lkp" "struct thread *td"
 .Ft void
@@ -152,6 +155,16 @@ Allow recursion on an exclusive lock.
 For every lock there must be a release.
 .El
 .El
+.Pp
+The
+.Fn lockmgr_try
+function is similar to
+.Fn lockmgr
+but it will not sleep and returns
+.Dv TRUE
+if the lock was successfully obtained and
+.Dv FALSE
+if it was not.
 .Pp
 The
 .Fn lockstatus
