--- a/share/man/man9/sysctl_add_oid.9
+++ b/share/man/man9/sysctl_add_oid.9
@@ -27,12 +27,27 @@
 .\"
 .\" $FreeBSD: src/share/man/man9/sysctl_add_oid.9,v 1.21 2006/04/28 10:45:27 rwatson Exp $
 .\"
-.Dd July 20, 2018
+.Dd July 21, 2018
 .Dt SYSCTL_ADD_OID 9
 .Os
 .Sh NAME
 .Nm sysctl_add_oid ,
-.Nm sysctl_remove_oid
+.Nm sysctl_remove_oid ,
+.Nm SYSCTL_CHILDREN ,
+.Nm SYSCTL_STATIC_CHILDREN ,
+.Nm SYSCTL_ADD_OID ,
+.Nm SYSCTL_ADD_NODE ,
+.Nm SYSCTL_ADD_STRING ,
+.Nm SYSCTL_ADD_INT ,
+.Nm SYSCTL_ADD_U32 ,
+.Nm SYSCTL_ADD_UINT ,
+.Nm SYSCTL_ADD_LONG ,
+.Nm SYSCTL_ADD_ULONG ,
+.Nm SYSCTL_ADD_QUAD ,
+.Nm SYSCTL_ADD_UQUAD ,
+.Nm SYSCTL_ADD_OPAQUE ,
+.Nm SYSCTL_ADD_STRUCT ,
+.Nm SYSCTL_ADD_PROC
 .Nd runtime sysctl tree manipulation
 .Sh SYNOPSIS
 .In sys/sysctl.h
@@ -116,7 +131,6 @@
 .Fa "const char *name"
 .Fa "int access"
 .Fa "uint32_t *arg"
-.Fa "int len"
 .Fa "const char *descr"
 .Fc
 .Ft struct sysctl_oid *
@@ -127,7 +141,7 @@
 .Fa "const char *name"
 .Fa "int access"
 .Fa "unsigned int *arg"
-.Fa "int len"
+.Fa "int val"
 .Fa "const char *descr"
 .Fc
 .Ft struct sysctl_oid *
@@ -158,7 +172,7 @@
 .Fa "const char *name"
 .Fa "int access"
 .Fa "quad_t *arg"
-.Fa "int len"
+.Fa "int val"
 .Fa "const char *descr"
 .Fc
 .Ft struct sysctl_oid *
@@ -169,7 +183,7 @@
 .Fa "const char *name"
 .Fa "int access"
 .Fa "u_quad_t *arg"
-.Fa "int len"
+.Fa "int val"
 .Fa "const char *descr"
 .Fc
 .Ft struct sysctl_oid *
