fdisk, gpt - Support trim on recent kernels
* Recent kernels removed the 'trim' sysctls.  Devices now allow trim by
  default.

* Fix the fdisk -E option to no longer try to use the sysctls.

* Add trim support to gpt init (-E).

* Fix swapon -e, change option to -E to match gpt and fdisk
  (-e still supported and does the same thing).

--- a/sbin/gpt/gpt.8
+++ b/sbin/gpt/gpt.8
@@ -237,7 +237,7 @@ option instructs
 .Nm
 to destroy the table in a way that it can be recovered.
 .\" ==== init ====
-.It Nm Ic init Fl f Oo Fl B Oc Ar device ...
+.It Nm Ic init Fl f Oo Fl B Oc Oo Fl E Oc Ar device ...
 The
 .Ic init
 command allows the user to create a new GPT similar
@@ -257,6 +257,13 @@ If the
 option is specified, /boot/bootx64.efi will be copied into
 the msdos slice (s0), and the disklabel will be initialized
 with -B in addition to the normal -r -w.
+.Pp
+If the
+.Fl E
+option is specified, the drive is TRIMed prior to the installation
+of the new label, if supported.  The operation will continue if not
+supported.  Note that this will complete destroy the contents of the
+drive.
 .\" ==== label ====
 .It Xo
 .Nm
